# polkabind

./: .gitignore  Cargo.toml  LICENSE  README.md  polkabind.md  uniffi.toml
.github/workflows/: build-and-publish.yml  kotlin-release.yml
bindings/kotlin/uniffi/polkabind/: polkabind.kt
bindings/swift/: polkabind.swift  polkabindFFI.h  polkabindFFI.modulemap
core/: Cargo.toml  build.rs
core/src/: lib.rs
docs/readmes/kotlin/: README.md
docs/readmes/swift/: README.md
examples/app/Android/: settings.gradle.kts
examples/app/Android/app/: build.gradle.kts
examples/app/Android/app/src/androidTest/java/dev/polkabind/example/: ExampleInstrumentedTest.kt
examples/app/Android/app/src/main/: AndroidManifest.xml
examples/app/Android/app/src/main/java/dev/polkabind/example/: MainActivity.kt
examples/app/Android/app/src/main/java/dev/polkabind/example/ui/theme/: Color.kt  Theme.kt  Type.kt
examples/app/Android/app/src/main/res/values/: strings.xml  themes.xml
examples/app/Android/app/src/test/java/dev/polkabind/example/: ExampleUnitTest.kt
examples/app/Android/gradle/wrapper/: gradle-wrapper.properties
examples/app/iOS/PolkabindExample/PolkabindExample/: ContentView.swift  PolkabindExampleApp.swift
examples/app/iOS/PolkabindExample/PolkabindExample.xcodeproj/: project.pbxproj
examples/app/iOS/PolkabindExample/PolkabindExample.xcodeproj/project.xcworkspace/xcuserdata/wassim.xcuserdatad/: UserInterfaceState.xcuserstate
examples/app/iOS/PolkabindExample/PolkabindExample.xcodeproj/xcuserdata/wassim.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/app/iOS/PolkabindExample/PolkabindExampleTests/: PolkabindExampleTests.swift
examples/app/iOS/PolkabindExample/PolkabindExampleUITests/: PolkabindExampleUITests.swift  PolkabindExampleUITestsLaunchTests.swift
polkabind-bindgen/: Cargo.toml  build.rs
polkabind-core/: Cargo.toml
polkabind-core/src/: lib.rs
scripts/: FrameworkInfo.plist  build-bindings.sh  build-kotlin-bindings.sh  build-swift-bindings.sh
