[workspace]
resolver = "3"
members = [
    "polkabind-core",
    "polkabind-bindgen"
]

[workspace.dependencies]
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
subxt = { version = "0.42.1", features = ["unstable-light-client"] }
subxt-signer = { version = "0.42.1" }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
uniffi = {version = "0.29.2" }
uniffi_macros = { version = "0.29.2" }

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
