[workspace]
resolver = "3"
members = [
    "polkabind-core",
    "polkabind-bindgen"
]

[workspace.dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
subxt = { version = "0.42.1", default-features = false, features = ["native", "jsonrpsee"] }
subxt-signer = { version = "0.42.1" }
thiserror = { version = "2.0.12", default-features = false }
tokio = { version = "1.45.1", default-features = false, features = ["rt-multi-thread", "macros"] }
uniffi = {version = "=0.29.3", default-features = false, features = ["cli", "build", "bindgen"]}
uniffi_macros = { version = "=0.29.3", default-features = false }

[profile.release]
lto = true
strip = true
panic = 'abort'
codegen-units = 1
opt-level = "z"
