[package]
name = "polkabind"
authors = [ "Wassim Mansouri <wassim@polkabind.dev>" ]
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "polkabind"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
once_cell = "1.21.3"
serde = { workspace = true, features = ["derive"] }
subxt = { workspace = true, features = ["unstable-light-client"] }
tokio = { workspace = true, features = ["full"] }
uniffi = { workspace = true, features = ["build", "cli"] }
uniffi_macros = { workspace = true }

[build-dependencies]
uniffi_bindgen = "0.29.2"
