[package]
name = "polkabind-bindgen"
version = "0.1.0"
edition = "2024"
authors = [ "Wassim Mansouri <wassim@polkabind.dev>" ]

[dependencies]
polkabind-core = { path = "../polkabind-core" }
uniffi = { workspace = true}

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[build-dependencies]
uniffi = {workspace = true}
