[package]
name = "polkabind-core"
authors = [ "Wassim Mansouri <wassim@polkabind.dev>" ]
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "polkabind"

[dependencies]
once_cell = "1.21.3"
serde = { workspace = true, features = ["derive"] }
subxt = { workspace = true, features = ["unstable-light-client"] }
tokio = { workspace = true, features = ["full"] }
uniffi = { workspace = true, features = ["build", "cli"] }
uniffi_macros = { workspace = true }
