[package]
name = "polkabind-core"
authors = [ "Wassim Mansouri <wassim@polkabind.dev>" ]
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "polkabind"

[dependencies]
hex = "0.4.3"
serde = { workspace = true, features = ["derive"] }
subxt = { workspace = true, features = ["unstable-light-client"] }
subxt-signer = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uniffi = { workspace = true, features = ["cli"] }
uniffi_macros = { workspace = true }
