[package]
name = "polkabind-core"
authors = [ "Wassim Mansouri <wassim@polkabind.dev>" ]
version = "0.1.31"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "polkabind"

[dependencies]
hex = { workspace = true}
serde = { workspace = true}
subxt = { workspace = true}
subxt-signer = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true}
uniffi = { workspace = true}
uniffi_macros = { workspace = true }
